:sparkles: photo upload

--- a/MedTech/MedTech/Views/Shared/_Home.cshtml
+++ b/MedTech/MedTech/Views/Shared/_Home.cshtml
@@ -7,7 +7,8 @@
                 <footer>
                     <ul class="nospace inline pushright">
                         <li><a class="btn" style="float:left" href="../../Ficha/Index/1">Fichas Médicas</a></li>
-                        </ul>
+                        <li><a class="btn" style="float:right" href="../../Perfil">Perfil</a></li>
+                    </ul>
                 </footer>
             </article>
         </div>
