--- a/MedTech/MedTech/Views/Shared/_Home.cshtml
+++ b/MedTech/MedTech/Views/Shared/_Home.cshtml
@@ -1,13 +1,13 @@
 ﻿    <div class="bgmed">
         <div id="pageintro" class="hoc clear">
             <article>
-                <p>Saúde em primeiro lugar</p>
+                <p></p>
                 <h3 class="heading">Atendimento 24h</h3>
                 <p>Cuidando de você, e da sua família.</p>
                 <footer>
                     <ul class="nospace inline pushright">
                         <li><a class="btn" style="float:left" href="../../Ficha/Index/1">Fichas Médicas</a></li>
-                        <li><a class="btn" style="float:right" href="../../Perfil">Perfil</a></li>
+                        <li><a class="btn" style="float:right" href="../../Perfil/Index/1">Perfil</a></li>
                     </ul>
                 </footer>
             </article>
