--- a/MedTech/MedTech/Views/Shared/_Layout.cshtml
+++ b/MedTech/MedTech/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
             </div>
             <div class="fl_right">
                 <div>
-                    @nomeUsuario <a href="../Usuario/Index/0"> (Sair)</a>
+                    @nomeUsuario <a href="../../Usuario/Index/0"> (Sair)</a>
                 </div>
             </div>
         </div>
