--- a/MedTech/MedTech/Views/Shared/_Navbar.cshtml
+++ b/MedTech/MedTech/Views/Shared/_Navbar.cshtml
@@ -5,7 +5,7 @@
         </div>
         <nav id="mainav" class="fl_right">
             <ul class="clear">
-                <li class="active"><a href="Home">Início</a></li>
+                <li class="active"><a href="../../Home">Início</a></li>
                 <li>
                     <a class="drop" href="#">Agendamento</a>
                     <ul>
