--- a/MedTech/MedTech/wwwroot/css/useful.css
+++ b/MedTech/MedTech/wwwroot/css/useful.css
@@ -22,3 +22,648 @@
         box-shadow: none;
         transform: scale(0.98);
     }
+
+#formFooter {
+    background-color: #f6f6f6;
+    border-top: 1px solid #dce8f1;
+    padding: 25px;
+    text-align: center;
+    -webkit-border-radius: 0 0 10px 10px;
+    border-radius: 0 0 10px 10px;
+}
+
+underlineHover:after {
+    display: block;
+    left: 0;
+    bottom: -10px;
+    width: 0;
+    height: 2px;
+    background-color: #56baed;
+    content: "";
+    transition: width 0.2s;
+}
+
+.underlineHover:hover {
+    color: #0d0d0d;
+}
+
+    .underlineHover:hover:after {
+        width: 100%;
+    }
+
+.btnn {
+    display: inline-block;
+    font-weight: 400;
+    color: #212529;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+@media (prefers-reduced-motion: reduce) {
+    .btnn {
+        transition: none;
+    }
+}
+
+.btnn:hover {
+    color: #212529;
+    text-decoration: none;
+}
+
+.btnn:focus, .btnn.focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.btnn.disabled, .btnn:disabled {
+    opacity: 0.65;
+}
+
+a.btnn.disabled,
+fieldset:disabled a.btnn {
+    pointer-events: none;
+}
+
+.btnn-primary {
+    color: #fff;
+    background-color: #56baed;
+    border-color: #56baed;
+}
+
+    .btnn-primary:hover {
+        color: #fff;
+        background-color: #39ace7;
+        border-color: #39ace7;
+    }
+
+    .btnn-primary:focus, .btnn-primary.focus {
+        box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
+    }
+
+    .btnn-primary.disabled, .btnn-primary:disabled {
+        color: #fff;
+        background-color: #007bff;
+        border-color: #007bff;
+    }
+
+    .btnn-primary:not(:disabled):not(.disabled):active, .btnn-primary:not(:disabled):not(.disabled).active,
+    .show > .btnn-primary.dropdown-toggle {
+        color: #fff;
+        background-color: #0062cc;
+        border-color: #005cbf;
+    }
+
+        .btnn-primary:not(:disabled):not(.disabled):active:focus, .btnn-primary:not(:disabled):not(.disabled).active:focus,
+        .show > .btnn-primary.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
+        }
+
+.btnn-secondary {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+}
+
+    .btnn-secondary:hover {
+        color: #fff;
+        background-color: #5a6268;
+        border-color: #545b62;
+    }
+
+    .btnn-secondary:focus, .btnn-secondary.focus {
+        box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
+    }
+
+    .btnn-secondary.disabled, .btnn-secondary:disabled {
+        color: #fff;
+        background-color: #6c757d;
+        border-color: #6c757d;
+    }
+
+    .btnn-secondary:not(:disabled):not(.disabled):active, .btnn-secondary:not(:disabled):not(.disabled).active,
+    .show > .btnn-secondary.dropdown-toggle {
+        color: #fff;
+        background-color: #545b62;
+        border-color: #4e555b;
+    }
+
+        .btnn-secondary:not(:disabled):not(.disabled):active:focus, .btnn-secondary:not(:disabled):not(.disabled).active:focus,
+        .show > .btnn-secondary.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
+        }
+
+.btnn-success {
+    color: #fff;
+    background-color: #28a745;
+    border-color: #28a745;
+}
+
+    .btnn-success:hover {
+        color: #fff;
+        background-color: #218838;
+        border-color: #1e7e34;
+    }
+
+    .btnn-success:focus, .btnn-success.focus {
+        box-shadow: 0 0 0 0.2rem rgba(72, 180, 97, 0.5);
+    }
+
+    .btnn-success.disabled, .btnn-success:disabled {
+        color: #fff;
+        background-color: #28a745;
+        border-color: #28a745;
+    }
+
+    .btnn-success:not(:disabled):not(.disabled):active, .btnn-success:not(:disabled):not(.disabled).active,
+    .show > .btnn-success.dropdown-toggle {
+        color: #fff;
+        background-color: #1e7e34;
+        border-color: #1c7430;
+    }
+
+        .btnn-success:not(:disabled):not(.disabled):active:focus, .btnn-success:not(:disabled):not(.disabled).active:focus,
+        .show > .btnn-success.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(72, 180, 97, 0.5);
+        }
+
+.btnn-info {
+    color: #fff;
+    background-color: #17a2b8;
+    border-color: #17a2b8;
+}
+
+    .btnn-info:hover {
+        color: #fff;
+        background-color: #138496;
+        border-color: #117a8b;
+    }
+
+    .btnn-info:focus, .btnn-info.focus {
+        box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
+    }
+
+    .btnn-info.disabled, .btnn-info:disabled {
+        color: #fff;
+        background-color: #17a2b8;
+        border-color: #17a2b8;
+    }
+
+    .btnn-info:not(:disabled):not(.disabled):active, .btnn-info:not(:disabled):not(.disabled).active,
+    .show > .btnn-info.dropdown-toggle {
+        color: #fff;
+        background-color: #117a8b;
+        border-color: #10707f;
+    }
+
+        .btnn-info:not(:disabled):not(.disabled):active:focus, .btnn-info:not(:disabled):not(.disabled).active:focus,
+        .show > .btnn-info.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
+        }
+
+.btnn-warning {
+    color: #212529;
+    background-color: #ffc107;
+    border-color: #ffc107;
+}
+
+    .btnn-warning:hover {
+        color: #212529;
+        background-color: #e0a800;
+        border-color: #d39e00;
+    }
+
+    .btnn-warning:focus, .btnn-warning.focus {
+        box-shadow: 0 0 0 0.2rem rgba(222, 170, 12, 0.5);
+    }
+
+    .btnn-warning.disabled, .btnn-warning:disabled {
+        color: #212529;
+        background-color: #ffc107;
+        border-color: #ffc107;
+    }
+
+    .btnn-warning:not(:disabled):not(.disabled):active, .btnn-warning:not(:disabled):not(.disabled).active,
+    .show > .btnn-warning.dropdown-toggle {
+        color: #212529;
+        background-color: #d39e00;
+        border-color: #c69500;
+    }
+
+        .btnn-warning:not(:disabled):not(.disabled):active:focus, .btnn-warning:not(:disabled):not(.disabled).active:focus,
+        .show > .btnn-warning.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(222, 170, 12, 0.5);
+        }
+
+.btnn-danger {
+    color: #fff;
+    background-color: #dc3545;
+    border-color: #dc3545;
+}
+
+    .btnn-danger:hover {
+        color: #fff;
+        background-color: #c82333;
+        border-color: #bd2130;
+    }
+
+    .btnn-danger:focus, .btnn-danger.focus {
+        box-shadow: 0 0 0 0.2rem rgba(225, 83, 97, 0.5);
+    }
+
+    .btnn-danger.disabled, .btnn-danger:disabled {
+        color: #fff;
+        background-color: #dc3545;
+        border-color: #dc3545;
+    }
+
+    .btnn-danger:not(:disabled):not(.disabled):active, .btnn-danger:not(:disabled):not(.disabled).active,
+    .show > .btnn-danger.dropdown-toggle {
+        color: #fff;
+        background-color: #bd2130;
+        border-color: #b21f2d;
+    }
+
+        .btnn-danger:not(:disabled):not(.disabled):active:focus, .btnn-danger:not(:disabled):not(.disabled).active:focus,
+        .show > .btnn-danger.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(225, 83, 97, 0.5);
+        }
+
+.btnn-light {
+    color: #212529;
+    background-color: #f8f9fa;
+    border-color: #f8f9fa;
+}
+
+    .btnn-light:hover {
+        color: #212529;
+        background-color: #e2e6ea;
+        border-color: #dae0e5;
+    }
+
+    .btnn-light:focus, .btnn-light.focus {
+        box-shadow: 0 0 0 0.2rem rgba(216, 217, 219, 0.5);
+    }
+
+    .btnn-light.disabled, .btnn-light:disabled {
+        color: #212529;
+        background-color: #f8f9fa;
+        border-color: #f8f9fa;
+    }
+
+    .btnn-light:not(:disabled):not(.disabled):active, .btnn-light:not(:disabled):not(.disabled).active,
+    .show > .btnn-light.dropdown-toggle {
+        color: #212529;
+        background-color: #dae0e5;
+        border-color: #d3d9df;
+    }
+
+        .btnn-light:not(:disabled):not(.disabled):active:focus, .btnn-light:not(:disabled):not(.disabled).active:focus,
+        .show > .btnn-light.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(216, 217, 219, 0.5);
+        }
+
+.btnn-dark {
+    color: #fff;
+    background-color: #343a40;
+    border-color: #343a40;
+}
+
+    .btnn-dark:hover {
+        color: #fff;
+        background-color: #23272b;
+        border-color: #1d2124;
+    }
+
+    .btnn-dark:focus, .btnn-dark.focus {
+        box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5);
+    }
+
+    .btnn-dark.disabled, .btnn-dark:disabled {
+        color: #fff;
+        background-color: #343a40;
+        border-color: #343a40;
+    }
+
+    .btnn-dark:not(:disabled):not(.disabled):active, .btnn-dark:not(:disabled):not(.disabled).active,
+    .show > .btnn-dark.dropdown-toggle {
+        color: #fff;
+        background-color: #1d2124;
+        border-color: #171a1d;
+    }
+
+        .btnn-dark:not(:disabled):not(.disabled):active:focus, .btnn-dark:not(:disabled):not(.disabled).active:focus,
+        .show > .btnn-dark.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5);
+        }
+
+.btnn-outline-primary {
+    color: #007bff;
+    border-color: #007bff;
+}
+
+    .btnn-outline-primary:hover {
+        color: #fff;
+        background-color: #007bff;
+        border-color: #007bff;
+    }
+
+    .btnn-outline-primary:focus, .btnn-outline-primary.focus {
+        box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+    }
+
+    .btnn-outline-primary.disabled, .btnn-outline-primary:disabled {
+        color: #007bff;
+        background-color: transparent;
+    }
+
+    .btnn-outline-primary:not(:disabled):not(.disabled):active, .btnn-outline-primary:not(:disabled):not(.disabled).active,
+    .show > .btnn-outline-primary.dropdown-toggle {
+        color: #fff;
+        background-color: #007bff;
+        border-color: #007bff;
+    }
+
+        .btnn-outline-primary:not(:disabled):not(.disabled):active:focus, .btnn-outline-primary:not(:disabled):not(.disabled).active:focus,
+        .show > .btnn-outline-primary.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+        }
+
+.btnn-outline-secondary {
+    color: #6c757d;
+    border-color: #6c757d;
+}
+
+    .btnn-outline-secondary:hover {
+        color: #fff;
+        background-color: #6c757d;
+        border-color: #6c757d;
+    }
+
+    .btnn-outline-secondary:focus, .btnn-outline-secondary.focus {
+        box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
+    }
+
+    .btnn-outline-secondary.disabled, .btnn-outline-secondary:disabled {
+        color: #6c757d;
+        background-color: transparent;
+    }
+
+    .btnn-outline-secondary:not(:disabled):not(.disabled):active, .btnn-outline-secondary:not(:disabled):not(.disabled).active,
+    .show > .btnn-outline-secondary.dropdown-toggle {
+        color: #fff;
+        background-color: #6c757d;
+        border-color: #6c757d;
+    }
+
+        .btnn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btnn-outline-secondary:not(:disabled):not(.disabled).active:focus,
+        .show > .btnn-outline-secondary.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
+        }
+
+.btnn-outline-success {
+    color: #28a745;
+    border-color: #28a745;
+}
+
+    .btnn-outline-success:hover {
+        color: #fff;
+        background-color: #28a745;
+        border-color: #28a745;
+    }
+
+    .btnn-outline-success:focus, .btnn-outline-success.focus {
+        box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
+    }
+
+    .btnn-outline-success.disabled, .btnn-outline-success:disabled {
+        color: #28a745;
+        background-color: transparent;
+    }
+
+    .btnn-outline-success:not(:disabled):not(.disabled):active, .btnn-outline-success:not(:disabled):not(.disabled).active,
+    .show > .btnn-outline-success.dropdown-toggle {
+        color: #fff;
+        background-color: #28a745;
+        border-color: #28a745;
+    }
+
+        .btnn-outline-success:not(:disabled):not(.disabled):active:focus, .btnn-outline-success:not(:disabled):not(.disabled).active:focus,
+        .show > .btnn-outline-success.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
+        }
+
+.btnn-outline-info {
+    color: #17a2b8;
+    border-color: #17a2b8;
+}
+
+    .btnn-outline-info:hover {
+        color: #fff;
+        background-color: #17a2b8;
+        border-color: #17a2b8;
+    }
+
+    .btnn-outline-info:focus, .btnn-outline-info.focus {
+        box-shadow: 0 0 0 0.2rem rgba(23, 162, 184, 0.5);
+    }
+
+    .btnn-outline-info.disabled, .btnn-outline-info:disabled {
+        color: #17a2b8;
+        background-color: transparent;
+    }
+
+    .btnn-outline-info:not(:disabled):not(.disabled):active, .btnn-outline-info:not(:disabled):not(.disabled).active,
+    .show > .btnn-outline-info.dropdown-toggle {
+        color: #fff;
+        background-color: #17a2b8;
+        border-color: #17a2b8;
+    }
+
+        .btnn-outline-info:not(:disabled):not(.disabled):active:focus, .btnn-outline-info:not(:disabled):not(.disabled).active:focus,
+        .show > .btnn-outline-info.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(23, 162, 184, 0.5);
+        }
+
+.btnn-outline-warning {
+    color: #ffc107;
+    border-color: #ffc107;
+}
+
+    .btnn-outline-warning:hover {
+        color: #212529;
+        background-color: #ffc107;
+        border-color: #ffc107;
+    }
+
+    .btnn-outline-warning:focus, .btnn-outline-warning.focus {
+        box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0.5);
+    }
+
+    .btnn-outline-warning.disabled, .btnn-outline-warning:disabled {
+        color: #ffc107;
+        background-color: transparent;
+    }
+
+    .btnn-outline-warning:not(:disabled):not(.disabled):active, .btnn-outline-warning:not(:disabled):not(.disabled).active,
+    .show > .btnn-outline-warning.dropdown-toggle {
+        color: #212529;
+        background-color: #ffc107;
+        border-color: #ffc107;
+    }
+
+        .btnn-outline-warning:not(:disabled):not(.disabled):active:focus, .btnn-outline-warning:not(:disabled):not(.disabled).active:focus,
+        .show > .btnn-outline-warning.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0.5);
+        }
+
+.btnn-outline-danger {
+    color: #dc3545;
+    border-color: #dc3545;
+}
+
+    .btnn-outline-danger:hover {
+        color: #fff;
+        background-color: #dc3545;
+        border-color: #dc3545;
+    }
+
+    .btnn-outline-danger:focus, .btnn-outline-danger.focus {
+        box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5);
+    }
+
+    .btnn-outline-danger.disabled, .btnn-outline-danger:disabled {
+        color: #dc3545;
+        background-color: transparent;
+    }
+
+    .btnn-outline-danger:not(:disabled):not(.disabled):active, .btnn-outline-danger:not(:disabled):not(.disabled).active,
+    .show > .btnn-outline-danger.dropdown-toggle {
+        color: #fff;
+        background-color: #dc3545;
+        border-color: #dc3545;
+    }
+
+        .btnn-outline-danger:not(:disabled):not(.disabled):active:focus, .btnn-outline-danger:not(:disabled):not(.disabled).active:focus,
+        .show > .btnn-outline-danger.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5);
+        }
+
+.btnn-outline-light {
+    color: #f8f9fa;
+    border-color: #f8f9fa;
+}
+
+    .btnn-outline-light:hover {
+        color: #212529;
+        background-color: #f8f9fa;
+        border-color: #f8f9fa;
+    }
+
+    .btnn-outline-light:focus, .btnn-outline-light.focus {
+        box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5);
+    }
+
+    .btnn-outline-light.disabled, .btnn-outline-light:disabled {
+        color: #f8f9fa;
+        background-color: transparent;
+    }
+
+    .btnn-outline-light:not(:disabled):not(.disabled):active, .btnn-outline-light:not(:disabled):not(.disabled).active,
+    .show > .btnn-outline-light.dropdown-toggle {
+        color: #212529;
+        background-color: #f8f9fa;
+        border-color: #f8f9fa;
+    }
+
+        .btnn-outline-light:not(:disabled):not(.disabled):active:focus, .btnn-outline-light:not(:disabled):not(.disabled).active:focus,
+        .show > .btnn-outline-light.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5);
+        }
+
+.btnn-outline-dark {
+    color: #343a40;
+    border-color: #343a40;
+}
+
+    .btnn-outline-dark:hover {
+        color: #fff;
+        background-color: #343a40;
+        border-color: #343a40;
+    }
+
+    .btnn-outline-dark:focus, .btnn-outline-dark.focus {
+        box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
+    }
+
+    .btnn-outline-dark.disabled, .btnn-outline-dark:disabled {
+        color: #343a40;
+        background-color: transparent;
+    }
+
+    .btnn-outline-dark:not(:disabled):not(.disabled):active, .btnn-outline-dark:not(:disabled):not(.disabled).active,
+    .show > .btnn-outline-dark.dropdown-toggle {
+        color: #fff;
+        background-color: #343a40;
+        border-color: #343a40;
+    }
+
+        .btnn-outline-dark:not(:disabled):not(.disabled):active:focus, .btnn-outline-dark:not(:disabled):not(.disabled).active:focus,
+        .show > .btnn-outline-dark.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
+        }
+
+.btnn-link {
+    font-weight: 400;
+    color: #007bff;
+    text-decoration: none;
+}
+
+    .btnn-link:hover {
+        color: #0056b3;
+        text-decoration: underline;
+    }
+
+    .btnn-link:focus, .btnn-link.focus {
+        text-decoration: underline;
+        box-shadow: none;
+    }
+
+    .btnn-link:disabled, .btnn-link.disabled {
+        color: #6c757d;
+        pointer-events: none;
+    }
+
+.btnn-lg, .btnn-group-lg > .btnn {
+    padding: 0.5rem 1rem;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    border-radius: 0.3rem;
+}
+
+.btnn-sm, .btnn-group-sm > .btnn {
+    padding: 0.25rem 0.5rem;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    border-radius: 0.2rem;
+}
+
+.btnn-block {
+    display: block;
+    width: 100%;
+}
+
+    .btnn-block + .btnn-block {
+        margin-top: 0.5rem;
+    }
+
